--- a/Nwn2items.ini
+++ b/Nwn2items.ini
@@ -1452,7 +1452,7 @@ Nature's Rage Bullet=nx1_bullet01
 Reverberating Bullet=nx1_bullet02
 Shou Lung Wall Bullet=nx1_bullet04
 
-[Throwing]
+[ThrowingTab]
 Dart=nw_wthdt001
 Dart+1=nw_wthmdt002
 Dart+2=nw_wthmdt008
@@ -2389,5 +2389,27 @@ True Name Scroll=nwn2_it_plot_truename
 
 
 
-
-
+[Sets]
+Brazen1=ps_itemset_brazen1
+Brazen2=ps_itemset_brazen2
+Brazen3=ps_itemset_brazen3
+Brazen4=ps_itemset_brazen4
+CelGlory1=ps_itemset_CelGlory1
+CelGlory2=ps_itemset_CelGlory2
+CelGlory3=ps_itemset_CelGlory3
+Fallshad1=ps_itemset_Fallshad1
+Fallshad2=ps_itemset_Fallshad2
+Fallshad3=ps_itemset_Fallshad3
+Fallshad4=ps_itemset_Fallshad4
+Iggwilv1=ps_itemset_Iggwilv1
+Iggwilv2=ps_itemset_Iggwilv2
+Iggwilv3=ps_itemset_Iggwilv3
+Slaadskin1=ps_itemset_Slaadskin1
+Slaadskin2=ps_itemset_Slaadskin2
+Slaadskin3=ps_itemset_Slaadskin3
+Swordsaint1=ps_itemset_Swordsaint1
+Swordsaint2=ps_itemset_Swordsaint2
+Swordsaint3=ps_itemset_Swordsaint3
+Aarcher1=ps_itemset_Aarcher1
+Aarcher2=ps_itemset_Aarcher2
+Aarcher3=ps_itemset_Aarcher3
